package behavioral.strategy.CC1;

public class Nhan implements Tinh{
    @Override
    public float tinh(float a, float b) {
        return a * b;
    }
}
