package behavioral.strategy.CC1;

public interface Tinh {
    float tinh(float a, float b);
}
