package behavioral.strategy.CC1;

public class Tru implements Tinh{
    @Override
    public float tinh(float a, float b) {
        return a-b;
    }
}
